Design: fix a regression on mobile devices.
 * Padding was not set to zero on uls and ols in the list of photos.
 * Also, on mobile, trim some excessive vertical spacing between photos.

--- a/src/components/sass/thumb.scss
+++ b/src/components/sass/thumb.scss
@@ -17,5 +17,6 @@
   @include max-screen(1024px) {
     transform-origin: center center;
     transform: scale(0.85);
+    margin: 15px auto;
   }
 }
